Fixes tooltip on mobile

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ section {
 
 @media (max-width: 620px) {
   .section-border-circle::after {
-    height: 15px;
+    height: 10px;
     width: 68px;
     top: 30px;
     left: 20%;
@@ -442,6 +442,14 @@ section#about {
   position: relative;
   animation: blink 20s infinite;
 }
+@media (max-width: 620px) {
+  .funfact {
+    position: static;
+  }
+  .funfacts {
+    position: relative;
+  }
+}
 
 .funfact:nth-of-type(1) {
   animation-delay: 1.2s;
@@ -469,6 +477,14 @@ section#about {
   background: #ffffff;
   padding: 6px;
   box-shadow: -2px 2px 3px 2px rgba(0, 0, 0, 0.12);
+}
+
+@media (max-width: 620px) {
+  .funfact .tooltip {
+    left: 50%;
+    bottom: 75px;
+    transform: translateX(-50%);
+  }
 }
 
 .funfact:hover .tooltip {
